--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -436,6 +436,9 @@ h5, h3 {
       width: 100% !important;
     }
   }
+  .pitch_form_wrapper {
+    padding: 0;
+  }
 }
 
 @media (max-width: 600px) {
