--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -25,8 +25,8 @@
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  max-width: 100%;
-  overflow-x: hidden;
+  max-width: 100% !important;
+  overflow-x: hidden !important;
   word-break: break-word;
 }
 
