--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -32,7 +32,7 @@
     <% end %>
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
-      <div id="site-canvas">
+      <div id="site-canvas" style="max-width: fit-content; overflow-x: hidden;">
         <div class="overflow">
           <div class="bodywrapper">
             <header id="main_navigation" class="clearfix">
