--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -23,7 +23,7 @@
     <% end %>
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
-      <div id="site-canvas" style="max-width: fit-content; overflow-x: hidden;">
+      <div id="site-canvas">
         <div class="bodywrapper">
           <header id="main_navigation" class="clearfix">
             <div id="banner">
