--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -95,6 +95,8 @@ html, body {
 */
 #site-wrapper {
   position: relative;
+  max-width: 100%;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
 }
