fixed loading stats on dashboard javascript

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -472,6 +472,9 @@ h5, h3 {
           margin: 0;
         }
       }
+      .pitches-message {
+        margin-top: -10px;
+      }
     }
   }
   .analytics .card {
