--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -14,7 +14,7 @@
         <br>
       <% end %>
       <% if @pitches.count.eql? 0 %>
-        <i><%= @message %></i>
+        <i class="pitches-message"><%= @message %></i>
     <% end %>
     </div>
   </div>
