--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -473,7 +473,8 @@ h5, h3 {
         }
       }
       .pitches-message {
-        margin-top: -10px;
+        margin-top: 45px;
+        position: absolute;
       }
     }
   }
