--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -4,6 +4,15 @@ $gray:  #2a2a2a;
   margin-bottom: 20px;
 }
 
+.contact {
+  text-align: center;
+  h3 {
+    font-family: "Playfair Display";
+    line-height: 1.5;
+    margin: 30px auto 0 auto;
+  }
+}
+
 .welcome {
   img {
     opacity: 1;
