--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -47,7 +47,7 @@
         <h6 class="font-weight-bold text-uppercase">Get in Touch</h6>
         <ul class="list-unstyled">
           <li>
-            <a href="/contact-us">Contact form</a>
+            <a href="/contact-us">Contact us</a>
           </li>
           <li>
             <a>editors@theteenmagazine.com</a>
